cabal-version:      3.0
name:               solidity
version:            0.1.0.0
author:             Sondre Aasemoen
maintainer:         sondre@eons.io
synopsis:           A parser for the Solidity smart contract language
description:
  A parser for the Solidity smart contract language, written in megaparsec 
  with full support of version 0.8 of the language specification.

homepage:           https://github.com/sondr3/solidity-hs
license:            (MIT OR Apache-2.0)
license-file:       LICENSE LICENSE_APACHE
build-type:         Simple
category:           System
tested-with:        GHC ==8.10 || ==9.0 || ==9.2
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/solidity-hs.git

common config
  default-language:   GHC2021  
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Werror=missing-deriving-strategies
    -fwrite-ide-info -Wunused-packages

  build-depends:
    , base  ^>=4.16
    , text  ^>=2

library
  import:          config
  exposed-modules: Solidity
  hs-source-dirs:  src
  build-depends:
    , containers          ^>=0.6
    , megaparsec          ^>=9.3
    , optics              ^>=0.4
    , parser-combinators  ^>=1.3

  other-modules:
    Identifiers
    Parser
    Parser.Reserved
    PrettyPrint
    Types
    Utils
    Yul

test-suite solidity-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Solidity.ContractSpec
    Solidity.FunctionSpec
    Solidity.ImportSpec
    Solidity.InterfaceSpec
    Solidity.LibrarySpec
    Solidity.LiteralSpec
    Solidity.PragmaSpec
    Solidity.TypeSpec
    Solidity.VisibilitySpec
    TestUtils

  build-tool-depends: hspec-discover:hspec-discover ^>=2.10
  build-depends:
    , hspec             ^>=2.10
    , hspec-megaparsec  ^>=2.2
    , megaparsec        ^>=9.3
    , solidity

test-suite solidity-golden
  import:         config
  type:           exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , filepath       ^>=1.4
    , pretty-simple  ^>=4.1
    , solidity
    , tasty          ^>=1.4
    , tasty-golden   ^>=2.3
